testdata/golden/sema/invalid/struct_literal_return_unknown_field.fmt
// scenario: struct literal in return statement with unknown field name
type Bar = {
    value: int
}

fn test_unknown_field() -> Bar {
    return {value: 1, other_field: "hello"};  // ERROR: Bar has no field other_field
}
